# singleton-base

./: .bumpversion.cfg  .gitignore  AGENTS.md  README.md  directory_structure.txt  maskfile.md  noxfile.py  pyproject.toml  usage_example.py
.github/workflows/: python-app.yml
src/singleton_base/: __init__.py  singleton_base_legacy.py  singleton_base_new.py
tests/: test_import_legacy.py  test_import_modern.py  test_nested_subclassing.py  test_singleton_base.py  test_singleton_base_legacy.py  test_thread_lock.py
