[project]
name = "singleton-base"
version = "1.0.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chaz", email = "pypi@tachyon.top" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "bump2version>=1.0.1",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "nox>=2025.5.1",
    "pytest>=8.4.0",
    "rich>=14.0.0",
]
